# london-property-agent

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.claude/skills/area-analysis/: SKILL.md
.claude/skills/enrich-property/: SKILL.md
.claude/skills/property-search/: SKILL.md
.claude/skills/score-and-rank/: SKILL.md
.claude/skills/simplify-code/: SKILL.md
data/: results.md
src/agent/: config.py  main.py  prompt.py
src/dashboard/: app.py
src/mcp_servers/: crime.py  epc.py  land_registry.py  rightmove.py  schools.py  tfl_commute.py  whatsapp.py  zoopla.py
src/scoring/: engine.py
tests/: test_scoring.py
